# tetris-project

./: .gitignore  README.md  pyproject.toml
src/tests/: test_mino.py  test_mino_state.py  test_tetris_gym.py
src/tetris_gym/: __init__.py  action.py  board.py  custom_tetris.py  env.py  mino.py  mino_state.py  tetris.py  tetris_env.py
src/tetris_gym/envs/: __init__.py  tetris_env.py
src/tetris_gym/tetris/: board.py  mino_state.py  tetris.py
src/tetris_project/: README.md  __init__.py  config.py  controller.py
src/tetris_project/ai/: DQN.py  NN.py  NN_in.weights.h5  NN_new.weights.h5  NN_out.weights.h5  __init__.py  out.weights.h5  tetris_DQN.h5  tetris_DQN.pth
src/tetris_project/ai/param/: NN.weights.h5  NN.weights_2.h5  NN.weights_3.h5  NN0.weights.h5  NN1_nonhold.weights.h5  NN2_hold.weights.h5  NN5.weights.h5  NN6.pth  README.md
src/tetris_project/dqn/: __init__.py  controller.py
src/tetris_project/nn/: NN.py  __init__.py
src/tetris_project/nn/param/: NN0.pth  NN1.pth  NN2.pth  NN2.weights.h5  NN3.pth  NN3.weights.h5  NN4.pth  NN4.weights.h5  NN5.pth  NN6.pth  README.md
