[project]
name = "tetris-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sor4chi", email = "80559385+sor4chi@users.noreply.github.com" },
]
dependencies = [
    "numpy>=1.26.4",
    "colr>=0.9.1",
    "torch>=2.2.1",
    "torchaudio>=2.2.1",
    "torchvision>=0.17.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "tetris_project:start"
train = "tetris_project:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tetris_project", "src/tetris_gym", "src/tests"]

[sources]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"
